--- a/1. Desafio 1/index.html
+++ b/1. Desafio 1/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="main.js"></script>
+    <script type="module" src="./js/main.mjs"></script>
   </body>
 </html>
